fix placeholder overflow

--- a/CSS/mediaQuery_and_animation.css
+++ b/CSS/mediaQuery_and_animation.css
@@ -176,6 +176,9 @@
     bottom: 180px;
     right: 20px;
   }
+  input::placeholder {
+    text-overflow: ellipsis;
+  }
 }
 @media screen and (max-width: 590px) {
   .email {
